Fix aligment issue on mobile devices in the landining page button

--- a/js/features/header/header.scss
+++ b/js/features/header/header.scss
@@ -73,7 +73,7 @@ select {
     }
 
     .w3-display-left {
-        top: 73%;
+        top: 68%;
     }
   }
 }
