--- a/public/main.css
+++ b/public/main.css
@@ -92,7 +92,7 @@ select {
   header .w3-image {
     height: 390px; }
   header .w3-display-left {
-    top: 73%; } }
+    top: 68%; } }
 
 @media (min-width: 768px) {
   header .w3-image {
